# gt-summary

./: .gitignore  LICENSE  README.md  pyproject.toml  testing.ipynb
src/gt_summary/: __init__.py  _spark.py  _stats.py  summarize.py
